test/circt-vcd/errors.vcd
$comment 
RUN: circt-vcd %s --verify-diagnostics --split-input-file
$end

// -----
$comment
expected-error @+3 {{expected keyword `$end`}}
$end
$date Fri Jan 3 15:32:32 2025
// -----

$comment
expected-error @+2 {{unexpected scope kind `bar`}}
$end
$scope bar foo $end
$upscope $end

// -----
$scope module foo $end
$comment
expected-error @+2 {{unexpected variable kind `foo`}}
$end
$var foo 1 ! signal $end
$upscope $end
$enddefinitions $end

// -----
$scope module foo $end
$comment
expected-error @+2 {{invalid integer literal}}
$end
$var wire abc ! signal $end
$upscope $end
$enddefinitions $end
